// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should allow to custom validator with validator prop 1`] = `
<div class="r-field__error-message">
  foo name
</div>
`;

exports[`should render AddressEdit correctly 1`] = `
<form class="r-form r-address-edit">
  <div class="r-address-edit__fields">
    <div class="r-cell r-field">
      <div class="r-cell__title r-field__label">
        <label id="r-field-label"
               for="r-field-input"
        >
          Name
        </label>
      </div>
      <div class="r-cell__value r-field__value">
        <div class="r-field__body">
          <input type="text"
                 id="r-field-input"
                 class="r-field__control"
                 placeholder="Name"
                 aria-labelledby="r-field-label"
          >
        </div>
      </div>
    </div>
    <div class="r-cell r-field">
      <div class="r-cell__title r-field__label">
        <label id="r-field-label"
               for="r-field-input"
        >
          Phone
        </label>
      </div>
      <div class="r-cell__value r-field__value">
        <div class="r-field__body">
          <input type="tel"
                 id="r-field-input"
                 class="r-field__control"
                 placeholder="Phone"
                 aria-labelledby="r-field-label"
          >
        </div>
      </div>
    </div>
    <div class="r-cell r-cell--clickable r-field"
         role="button"
         tabindex="0"
    >
      <div class="r-cell__title r-field__label">
        <label id="r-field-label"
               for="r-field-input"
        >
          Area
        </label>
      </div>
      <div class="r-cell__value r-field__value">
        <div class="r-field__body">
          <input type="text"
                 id="r-field-input"
                 class="r-field__control"
                 readonly
                 placeholder="Area"
                 aria-labelledby="r-field-label"
          >
        </div>
      </div>
      <i class="r-badge__wrapper r-icon r-cell__right-icon">
      </i>
    </div>
    <div class="r-cell r-field r-address-edit-detail">
      <div class="r-cell__title r-field__label">
        <label id="r-field-label"
               for="r-field-input"
        >
          Address
        </label>
      </div>
      <div class="r-cell__value r-field__value">
        <div class="r-field__body">
          <textarea id="r-field-input"
                    rows="1"
                    class="r-field__control"
                    placeholder="Address"
                    aria-labelledby="r-field-label"
          >
          </textarea>
        </div>
      </div>
    </div>
  </div>
  <div class="r-address-edit__buttons">
    <button type="submit"
            class="r-button r-button--primary r-button--normal r-button--block r-button--round r-address-edit__button"
    >
      <div class="r-button__content">
        <span class="r-button__text">
          Save
        </span>
      </div>
    </button>
  </div>
</form>
`;

exports[`should render AddressEdit with props correctly 1`] = `
<form class="r-form r-address-edit">
  <div class="r-address-edit__fields">
    <div class="r-cell r-field">
      <div class="r-cell__title r-field__label">
        <label id="r-field-label"
               for="r-field-input"
        >
          Name
        </label>
      </div>
      <div class="r-cell__value r-field__value">
        <div class="r-field__body">
          <input type="text"
                 id="r-field-input"
                 class="r-field__control"
                 placeholder="Name"
                 aria-labelledby="r-field-label"
          >
        </div>
      </div>
    </div>
    <div class="r-cell r-field">
      <div class="r-cell__title r-field__label">
        <label id="r-field-label"
               for="r-field-input"
        >
          Phone
        </label>
      </div>
      <div class="r-cell__value r-field__value">
        <div class="r-field__body">
          <input type="tel"
                 id="r-field-input"
                 class="r-field__control"
                 placeholder="Phone"
                 aria-labelledby="r-field-label"
          >
        </div>
      </div>
    </div>
    <div class="r-cell r-cell--clickable r-field"
         role="button"
         tabindex="0"
    >
      <div class="r-cell__title r-field__label">
        <label id="r-field-label"
               for="r-field-input"
        >
          Area
        </label>
      </div>
      <div class="r-cell__value r-field__value">
        <div class="r-field__body">
          <input type="text"
                 id="r-field-input"
                 class="r-field__control"
                 readonly
                 placeholder="Area"
                 aria-labelledby="r-field-label"
          >
        </div>
      </div>
      <i class="r-badge__wrapper r-icon r-cell__right-icon">
      </i>
    </div>
    <div class="r-cell r-field r-address-edit-detail">
      <div class="r-cell__title r-field__label">
        <label id="r-field-label"
               for="r-field-input"
        >
          Address
        </label>
      </div>
      <div class="r-cell__value r-field__value">
        <div class="r-field__body">
          <textarea id="r-field-input"
                    rows="1"
                    class="r-field__control"
                    placeholder="Address"
                    aria-labelledby="r-field-label"
          >
          </textarea>
        </div>
      </div>
    </div>
  </div>
  <div class="r-cell r-cell--center r-address-edit__default">
    <div class="r-cell__title">
      <span>
        Set as the default address
      </span>
    </div>
    <div role="switch"
         class="r-switch r-switch--on"
         tabindex="0"
         aria-checked="true"
    >
      <div class="r-switch__node">
      </div>
    </div>
  </div>
  <div class="r-address-edit__buttons">
    <button type="submit"
            class="r-button r-button--primary r-button--normal r-button--block r-button--round r-address-edit__button"
    >
      <div class="r-button__content">
        <span class="r-button__text">
          Save
        </span>
      </div>
    </button>
  </div>
</form>
`;

exports[`should valid address detail and render error message correctly 1`] = `
<div class="r-cell r-field r-address-edit-detail">
  <div class="r-cell__title r-field__label">
    <label id="r-field-label"
           for="r-field-input"
    >
      Address
    </label>
  </div>
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <textarea id="r-field-input"
                rows="1"
                class="r-field__control"
                placeholder="Address"
                aria-labelledby="r-field-label"
                style="height: auto;"
      >
      </textarea>
    </div>
    <div class="r-field__error-message">
      Address can not be empty
    </div>
  </div>
</div>
`;

exports[`should valid area code and render error message correctly 1`] = `
<div class="r-cell r-cell--clickable r-field"
     role="button"
     tabindex="0"
>
  <div class="r-cell__title r-field__label">
    <label id="r-field-label"
           for="r-field-input"
    >
      Area
    </label>
  </div>
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <input type="text"
             id="r-field-input"
             class="r-field__control"
             readonly
             placeholder="Area"
             aria-labelledby="r-field-label"
      >
    </div>
  </div>
  <i class="r-badge__wrapper r-icon r-cell__right-icon">
  </i>
</div>
`;

exports[`should valid name and render error message correctly 1`] = `
<div class="r-cell r-field">
  <div class="r-cell__title r-field__label">
    <label id="r-field-label"
           for="r-field-input"
    >
      Name
    </label>
  </div>
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <input type="text"
             id="r-field-input"
             class="r-field__control"
             placeholder="Name"
             aria-labelledby="r-field-label"
      >
    </div>
    <div class="r-field__error-message">
      Please fill in the name
    </div>
  </div>
</div>
`;

exports[`should valid tel and render error message correctly 1`] = `
<div class="r-cell r-field">
  <div class="r-cell__title r-field__label">
    <label id="r-field-label"
           for="r-field-input"
    >
      Phone
    </label>
  </div>
  <div class="r-cell__value r-field__value">
    <div class="r-field__body">
      <input type="tel"
             id="r-field-input"
             class="r-field__control"
             placeholder="Phone"
             aria-labelledby="r-field-label"
      >
    </div>
    <div class="r-field__error-message">
      Malformed phone number
    </div>
  </div>
</div>
`;
